/*
Copyright 2022 Nokia.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";

//import "google/protobuf/any.proto";

package resolver;
option go_package = "github.com/henderiw-nephio/wire-connector/pkg/proto/resolverpb";

service Resolver {
  rpc Resolve (ResolveRequest) returns (ResolveResponse) {}
}

message NodeKey {
  string topology = 1; // topology is reflected as a namespace
  string nodeName = 2; // this is the podName
}

message ResolveRequest {
  NodeKey nodeKey = 1;
}

message ResolveResponse {
  StatusCode statusCode = 1;
  string reason = 2;
  string hostIP = 3;
}

enum StatusCode {
  OK = 0; // the status is OK
  NOK = 1; // the status is NOK
  NotFound = 2; // the object does not exists
}